usfm_parser/tests/snapshots/recovery__paragraph_marker_closed.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\p* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..28
  VerseStart 1@16..20
  Text "a  b"@21..28
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[paragraph-marker-closed] @23..26: paragraph marker `\p` cannot be closed with `*`
