usfm_parser/tests/snapshots/recovery__unknown_book_code.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id ZZZ Some book\n\\c 1\n\\p \\v 1 a"
---
ChapterStart 1@18..22
Para p@23..32
  VerseStart 1@26..30
  Text "a"@31..32
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[missing-id] @0..0: document must start with `\id`
error[unknown-book-code] @4..7: `ZZZ` is not a known book code
