usfm_parser/tests/snapshots/recovery__unlisted_book_code.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id ZZZ Some book\n\\c 1\n\\p \\v 1 a"
---
Book ZZZ "Some book" @0..17
ChapterStart 1@18..22
Para p@23..32
  VerseStart 1@26..30
  Text "a"@31..32
  VerseEnd 1
ChapterEnd 1
--- diagnostics
warning[unlisted-book-code] @4..7: `ZZZ` is not one of the book codes USFM lists; kept as written
